# proconio_enum_query

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: example.rs  zero-indexed.rs
impl/: Cargo.toml
impl/src/: lib.rs
src/: lib.rs
tests/: compile_error.rs  only_primitive_type_fields.rs  test.rs  translate_output_type.rs  trybuild_test.rs  unit_variant.rs  zero-indexed.rs
tests/compile_error/: generic_enum.rs  generic_enum.stderr  incollect_arg.rs  incollect_arg.stderr  not_enum.stderr
tests/testcases/: 01-can_build.rs  02-not_enum.rs  02-not_enum.stderr  03-only_primitive_variants.rs  04-translate_output_type.rs  05-unit_variant.rs  06-generic_enum.rs  06-generic_enum.stderr
