[package]
name = "proconio_enum_query"
version = "0.1.0"
authors = ["tyu-ru <tyuru.tw.cpp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.41", features = ["diff"] }
proconio = { version = "=0.3.6", features = ["derive"] }

[dependencies]
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"