[package]
name = "proconio_enum_query"
version = "0.1.1"
authors = ["tyu-ru <tyuru.tw.cpp@gmail.com>"]
edition = "2018"
repository = "https://github.com/tyu-ru/proconio_enum_query"
license = "CC0-1.0"
publish = false

[lib]
#name = "proconio_enum_query"
proc-macro = true

[dependencies]
syn = { version = "1.0.64", features = ["full", "extra-traits"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"

[dev-dependencies]
trybuild = { version = "1.0.41", features = ["diff"] }
proconio = { version = "0.3.6", features = ["derive"] }
