[workspace]

[patch.crates-io]
proc-macro2 = { git = "https://github.com/dtolnay/watt" }

[package]
name = "proconio_enum_query_impl"
version = "0.1.0"
authors = ["tyu-ru <tyuru.tw.cpp@gmail.com>"]
edition = "2018"
repository = "https://github.com/tyu-ru/proconio_enum_query"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
